--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "1.0.0",
   "main": "Bootstrap.ts",
   "scripts": {
-    "run:dev": "ts-node-dev --respawn --transpile-only ./src/Bootstrap.ts"
+    "run:dev": "ts-node-dev --respawn --transpile-only --no-notify -r tsconfig-paths/register src/Bootstrap.ts",
+    "test": "jest"
   },
   "license": "MIT",
   "devDependencies": {
     "ts-node-dev": "^1.1.6",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.2"
   },
   "dependencies": {
@@ -15,6 +17,7 @@
     "@donnyroufs/express-to-browter-adapter": "^1.0.1",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.33",
+    "awilix": "^4.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^5.11.19"
