--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/hapi__joi": "^17.1.6",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.2"
@@ -15,11 +16,13 @@
   "dependencies": {
     "@donnyroufs/browter": "^0.1.9",
     "@donnyroufs/express-to-browter-adapter": "^1.0.1",
+    "@hapi/joi": "^17.1.1",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.33",
     "awilix": "^4.3.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-joi-validation": "^5.0.0",
     "mongoose": "^5.11.19"
   }
 }
