--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "1.0.0",
   "main": "Bootstrap.ts",
   "scripts": {
-    "run:dev": "ts-node-dev --respawn --transpile-only --no-notify -r tsconfig-paths/register src/Bootstrap.ts",
-    "test": "jest"
+    "run:dev": "NODE_ENV=dev ts-node-dev --respawn --transpile-only --no-notify -r tsconfig-paths/register src/Bootstrap.ts",
+    "test:watch": "NODE_ENV=test jest --watch"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/hapi__joi": "^17.1.6",
+    "@types/jest": "^26.0.20",
+    "@types/supertest": "^2.0.10",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3",
+    "ts-jest": "^26.5.3",
     "ts-node-dev": "^1.1.6",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.2.2"
